# se_uncoma

./: README  README.md
easyduino1/: 8-easyduino.html  EASYDuino1-1-Rev2.sch
hackaton/: arquitectura_de_frankestito.odp  taller.txt
hackaton/arduino/: links-tutorial.txt
robotitos/: README  README.md  instalar-myro.sh  paraborrar.txt
robotitos/antiguo/docs/: Formulario_de_Proyecto-Sistemas_Embebidos-v4.odt
robotitos/antiguo/hackaton/: dia1-git.odp
robotitos/antiguo/hackaton/arduino/: links-tutorial.txt
robotitos/docs/: problemas_y_soluciones.txt
robotitos/faivision/: Makefile  comm.c  comm.h  detectar_colores.cpp  detectar_colores.h  faivision.c  faivision.h
robotitos/faivision/cvblob/: cvblob-0.10.4-src.tgz
robotitos/faivision/myro-c/: Makefile  MyroC.cpp
robotitos/faivision/myro-c/ejemplos/: Makefile  detectar-bordes-rojos.c  encontrar-caja-negra.c  faivision.h  motor.c  motor.py  seguidor-linea.c
robotitos/faivision/next_version/: Makefile  detectar_colores.cpp  red_object_tracking.cpp
robotitos/faivision/old_version/: comm.c  faivision.h
robotitos/hardware/: conexion-serial-mr3020-vs-easyduino.txt  shield-l293d-robotitos-fai.brd
robotitos/hardware/easyduino1/: EASYDuino1-1-Rev1.brd  README
robotitos/hardware/easyduino1/atmega/: link.txt
robotitos/hardware/placa_puente-H_para_frankestito/: LICENSE  README  listado_de_componentes.txt  prototipo final 2.1.brd  prototipo final 2.1.sch
robotitos/mr3020-linux/: [Escuelas]instalacion-linux-openwrt-mr3020.txt  instalacion-linux-openwrt-mr3020.txt  instalacion-linux-openwrt.txt
robotitos/mr3040-linux/: instalacion-linux-openwrt-mr3040.txt
robotitos/multipo_duinobot_23/: README  ejemplo_motores.ino
robotitos/myro-c/: INSTALAR  LEAME  MyroC.h  README  build.sh  ejecutar.sh
robotitos/myro-c/ejemplos/: motor2.c
robotitos/myro-cpp-2.3.0/: CHANGELOG.txt  CMakeLists.txt  README.txt
robotitos/myro-cpp-2.3.0/cmake/: myro-cpp-config.cmake  pkgconfig.cmake
robotitos/myro-cpp-2.3.0/docs/: Doxyfile.in  mainpage.txt
robotitos/myro-cpp-2.3.0/examples/: test_blob  test_camera  test_motor  video_stream
robotitos/myro-cpp-2.3.0/headers/: CMakeLists.txt  Filter.h  Graphics.h  ImageWindow.h  Myro.h  MyroCImg.h  MyroForwardDec.h  MyroIO.h  MyroInternals.h  MyroSmartPointer.h  Picture.h  Robot.h  Scribbler.h  VideoStream.h  jmemsrc.h  message_headers.h  serial.h
robotitos/myro-cpp-2.3.0/headers/CImg/: CImg.h  CMakeLists.txt
robotitos/myro-cpp-2.3.0/jpeg/: CMakeLists.txt  jcapimin.c  jcapistd.c  jccoefct.c  jccolor.c  jcdctmgr.c  jchuff.c  jcinit.c  jcmainct.c  jcmarker.c  jcmaster.c  jcomapi.c  jcparam.c  jcphuff.c  jcprepct.c  jcsample.c  jctrans.c  jdapimin.c  jdapistd.c  jdatadst.c  jdatasrc.c  jdcoefct.c  jdcolor.c  jddctmgr.c  jdhuff.c  jdinput.c  jdmainct.c  jdmarker.c  jdmaster.c  jdmerge.c  jdphuff.c  jdpostct.c  jdsample.c  jdtrans.c  jerror.c  jfdctflt.c  jfdctfst.c  jfdctint.c  jidctflt.c  jidctfst.c  (+7 more)
robotitos/myro-cpp-2.3.0/jpeg/myrojpeg/: CMakeLists.txt  myrojconfig.h  myrojdct.h  myrojerror.h  myrojinclude.h  myrojmemsys.h  myrojmorecfg.h  myrojpegint.h  myrojpeglib.h  myrojversion.h
robotitos/myro-cpp-2.3.0/src/: CMakeLists.txt  Filter.cpp  Graphics.cpp  ImageWindow.cpp  Myro.cpp  MyroInternals.cpp  Picture.cpp  Robot.cpp  Scribbler.cpp  VideoStream.cpp  jmemsrc.c  serial.cpp  serial.cpp.1  xcolors.cpp
robotitos/myro-cpp-2.3.0/test/: CMakeLists.txt  Makefile  README  askQuestion.cpp  take_snapshot.cpp  test_blob.cpp  test_camera.cpp  test_camera_fourwindow.cpp  test_camera_nonblocking.cpp  test_ir.cpp  test_motor.cpp  test_stall.cpp  video_stream.cpp
robotitos/myro-cpp-2.3.0/test/graphics/: CMakeLists.txt  Makefile  cascading_pictures.cpp  circles.cpp  graphwin_test.cpp  polygon_test.cpp  robot_joystick.cpp  robot_senses.cpp
robotitos/myro-python/: README  instalar-myro-python-en-fidebian.sh  instalar-myro.sh  instrucciones_para_utilizar_frankestito.txt  scribbler.py
robotitos/myro-python/ejemplos/: avanzar.py  controlando_el_robot.py  detectar-pared-blanca.py  detectar-pared-roja.py  gamepad.py
robotitos/myro-python/ejemplos/mejoras_del_oso/: avanzar.py  com.py  moverse1-2.py  rectangulo.py  robo2.py  robofai2.py  robot-backup.py  robot.py  robots.py
robotitos/myro-python/ejemplos/python2.6/: buscar.py  buscarrojo.py  flashing.py  locosxelfutbol.py  robofai1.py  robofai2.py  robofai3.py
robotitos/sketchbook/: README
robotitos/sketchbook/binarios_para_flash/: faiduino_test.cpp.hex  faiduino_test_nueva_placa_ld293_robofai4.cpp.hex  flashing.py
robotitos/sketchbook/faiduino_test/: faiduino_test.ino  faiduino_test_N6.ino
robotitos/sketchbook/libraries/faiduino/: motorcitos.c  motorcitos.cpp  motorcitos.h  protocol.c  protocol.cpp  protocol.h
robotitos/sketchbook/libraries_nuevaplacal293d/faiduino/: motorcitos.c  protocol.c  protocol.h
robotitos/sync/: Makefile  README  duino_sync.c
robotitos/web/: index.html
robotitos/web/css/: .style.css.swp  style.css
